--- a/platform_nutella/Procfile
+++ b/platform_nutella/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --pythonpath platform_nutella platform_nutella.wsgi
+web: gunicorn --pythonpath platform_nutella/platform_nutella.wsgi
 
