--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ food/__pycache__/
 accounts/__pycache__/
 food/migrations/__pycache__/
 accounts/migrations/__pycache__/
+platform_nutella/platform_nutella/settings/production.py
