--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 before_script:
   - pip install -r requirements.txt
 
-env: DJANGO_SETTINGS_MODULE='platform_nutella.settings.production'
+env: DJANGO_SETTINGS_MODULE="platform_nutella/platform_nutella.settings.production"
 
 services:
   - postgresql
