--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
 
 before_script:
   - pip install -r requirements.txt
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 env: DJANGO_SETTINGS_MODULE="platform_nutella.settings.travis"
 
