--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ branches:
 
 before_script:
   - pip install -r requirements.txt
-  - psql -c 'create database travis_ci_test;' -U postgres
+    # - psql -c 'create database travis_ci_test;' -U postgres
 
-env: DJANGO_SETTINGS_MODULE="platform_nutella.settings.travis"
+env: DJANGO_SETTINGS_MODULE="platform_nutella.settings.__init__"
 
 services:
   - postgresql
