--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_script:
   - pip install -r requirements.txt
     # - psql -c 'create database travis_ci_test;' -U postgres
 
-env: DJANGO_SETTINGS_MODULE="platform_nutella.settings.__init__"
+env: DJANGO_SETTINGS_MODULE="platform_nutella.settings.travis"
 
 services:
   - postgresql
 
 script:
-  - python platform_nutella/manage.py test
+  - python platform_nutella/manage.py test food
+  - python platform_nutella/manage.py test accounts 
 
